# advisor-dj

./: .dockerignore  .env.example  .env.prod.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  Dockerfile  Dockerfile.watcher  ENABLE_HTTPS.md  FIX_DOCKER_ACCESS.md  Makefile  QUICK_DEPLOY.md  QUICK_START_NGINX.md  README.md  SETUP.md  advisor-dj.service  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  temp_env
.cursor/rules/: 00-core.md  10-python-style.md  15_env_files_policy.md  20-testing-quality.md  30-architecture.md  40-web-and-cli.md  50-docker-devops.md  60-cursor-setup.md  70-django-rules.md  80-watcher-daemon.md  90-guardrails-and-checklists.md  95-documentation.md  98_documentation.md
.github/workflows/: ci.yml
accounts/: admin.py  backends.py  models.py  services.py
accounts/migrations/: 0001_initial.py  0002_initial.py
config/: __init__.py  asgi.py  logging.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  docker.py  production.py  test.py  test_postgres.py
docs/: AUDIT.md  CRITICAL_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS.md  DEPLOY_GUIDE.md  DEPLOY_PLAN.md  DEVELOPER_GUIDE.md  DEV_PLAN.md  DE_SCOPED.md  ENV.md  FILE_WATCHER_SETUP.md  NGINX_REVERSE_PROXY_ARCHITECTURE.md  NGINX_REVERSE_PROXY_IMPLEMENTATION.md  NGINX_SETUP.md  PROJECT_ANALYSIS.md  REFACTOR_PLAN.md  RUNBOOK.md  STATUS.md  TESTING_REPORT.md  WINDOWS_CA_CERTIFICATES.md  architecture.md  configuration.md  deployment.md  getting-started.md  operations.md  security.md  testing.md  troubleshooting.md
docs/archive/: DEVELOPER.md  DEVELOPER_GUIDE.md  README.md  docstrings.md
docs/concepts/: README.md  architecture-notes.md
docs/how-to/: README.md  development-setup.md  docker-deployment.md  go-live-day-checklist.md  production-commissioning-plan.md  production-deployment.md  transit-ingest-pipeline.md  vm-deploy-commands.md  vm-lan-deployment-preflight.md  vm-lan-preflight-status.md  windows-share.md
docs/reference/: API.md  README.md  models.md
flask/: README.md  requirements.txt
flask/app/: __init__.py  config.py
flask/app/import/: print-events.py  users.py
flask/app/models/: __init__.py  building.py  computer.py  department.py  port.py  print_event.py  printer.py  printer_model.py  user.py
flask/app/routes/: importer.py  main.py  uploader.py
flask/demon/: importer_daemon.py
flask/power_shell/: Export-ADUsers.ps1  Export-PrintEvents-hash.ps1  Export-PrintEvents.ps1  Export-PrintEventsToJson.ps1  PrintEvents_7+.ps1  export_print_events.ps1
infrastructure/: .gitignore  README.md
infrastructure/certs/: .gitkeep  README.md
infrastructure/cron/: advisor-db-backup.cron
infrastructure/nginx/: nginx.conf
infrastructure/samba/: smb.conf.example
infrastructure/systemd/: advisor-ingest-mover.service  advisor-ingest-mover.timer  advisor-ingest.env.example
printing/: admin.py  apps.py  filters.py  forms.py  health.py  importers.py  print_events_watcher.py  resources.py  services.py  signals.py  tables.py  urls.py  views.py
printing/migrations/: 0001_initial.py  0002_printer_cost_per_page.py  0003_alter_printevent_byte_size.py  0004_add_unique_job_id.py  0005_add_user_printer_indexes.py  0006_rename_printing_pr_user_id_tim_idx_printing_pr_user_id_584d4a_idx_and_more.py
printing/models/: __init__.py  building.py  department.py  print_event.py  printer.py
printing/tests/: test_models.py  test_services.py
scripts/: backup_db.sh  check_import_status.sh  check_stack_health.sh  deploy_all.sh  generate_env.sh  ingest_mover.sh  restore_db.sh  setup.sh  setup_transit_ingest.sh  smoke.sh  start-nginx.sh
scripts/windows/: send_dc_users.ps1  send_print1_events.ps1  send_print2_events.ps1  send_to_advisor_inbox.ps1
static/css/: style.css
templates/: base.html  user_info.html
templates/accounts/: login.html  logout.html
templates/printing/: dashboard.html  import_print_events_result.html  import_users_result.html  print_events.html  print_tree.html  statistics.html
tests/: conftest.py  factories.py
tests/integration/: test_watcher.py
tests/unit/: test_accounts_services.py  test_models.py  test_printing_filters.py  test_printing_forms.py  test_printing_signals.py  test_printing_tables.py  test_printing_views.py  test_services.py
(+15 files in other folders)
